--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale: en-US
 title: "My Awesome Site"
 description: "It really is the best."
 baseurl: # the subpath of your site, e.g. ""
-url: # the base hostname & protocol for your site e.g. "https://wooo.github.io"
+url: "https://wooo.github.io"
 logo: # path of site logo, e.g. "/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
